--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,15 @@
 group 'com.xraph.plugin.flutter_unity_widget'
-version '2022.2.2-SNAPSHOT'
+version '4.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.8.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -17,14 +17,14 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
 
         // DO NOT MODIFY
         // BUILD_ADD_UNITY_LIBS
 
         // FOR DEV ONLY
         flatDir {
-            dirs "libs"
+            dirs "${rootProject.projectDir}/../unityLibrary/libs"
         }
     }
 }
@@ -33,12 +33,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 34
-
-    // backwards compatible for old gradle versions without namespace
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.xraph.plugin.flutter_unity_widget'
-    }
+    namespace "com.xraph.plugin.flutter_unity_widget"  
+    compileSdkVersion 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -51,12 +47,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_11  // was 1.8
+        targetCompatibility JavaVersion.VERSION_11  // was 1.8
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
+        jvmTarget = "11"  // ← add this block entirely
     }
 }
 
@@ -64,8 +60,8 @@ def lifecycle_version = '2.4.1'
 def annotation_version = '1.3.0'
 
 dependencies {
+    compileOnly(name: 'unity-classes', ext:'jar')
     implementation project(':unityLibrary')
-    implementation(name: 'unity-classes', ext:'jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
